--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./static/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevAPI Manager - API聚合和项目管理工具</title>
     <meta name="description" content="专业的开发者工具，用于API聚合和项目管理，支持Swagger文档导入，提供直观的卡片式界面管理API接口。" />
